--- a/Analysis/Using the Profiler.ipynb
+++ b/Analysis/Using the Profiler.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
     "    GENE = ID.split('|')[4]\n",
     "    NSEQ = seg[2]\n",
     "    HSEQ = seg[3].rstrip('\\n')\n",
-    "    outfn = prefix + \"data/fa/\" + GENE + \"N2.fa\"\n",
+    "    outfn = prefix + \"data/fa/\" + GENE + \"_N2.fa\"\n",
     "    outfile = open(outfn, 'w')\n",
     "    outfile.write(\">\" + ID + \"\\n\")\n",
     "    newseq = []\n",
@@ -598,7 +598,7 @@
     "    outfile.write(('').join(newseq))\n",
     "    outfile.close()\n",
     "    fa_list.append(outfn)\n",
-    "    outfn = prefix + \"data/fa/\" + GENE + \"Hawaii.fa\"\n",
+    "    outfn = prefix + \"data/fa/\" + GENE + \"_Hawaii.fa\"\n",
     "    outfile = open(outfn, 'w')\n",
     "    outfile.write(\">\" + ID + \"\\n\")\n",
     "    newseq = []\n",
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -724,26 +724,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "msp-63N2\n",
-      "msp-63Hawaii\n",
-      "rad-50N2\n",
-      "rad-50Hawaii\n",
-      "R10E8.1N2\n",
-      "R10E8.1Hawaii\n",
-      "Y77E11A.7N2\n",
-      "Y77E11A.7Hawaii\n",
-      "math-18N2\n",
-      "math-18Hawaii\n",
-      "srp-1N2\n",
-      "srp-1Hawaii\n",
-      "9 files written.\n",
+      "msp-63_N2\n",
+      "msp-63_Hawaii\n",
+      "rad-50_N2\n",
+      "rad-50_Hawaii\n",
+      "R10E8.1_N2\n",
+      "R10E8.1_Hawaii\n",
+      "Y77E11A.7_N2\n",
+      "Y77E11A.7_Hawaii\n",
+      "math-18_N2\n",
+      "math-18_Hawaii\n",
+      "srp-1_N2\n",
+      "srp-1_Hawaii\n",
+      "12 files written.\n",
       "List found in /Volumes/users/Corinne_Simonti/projects/RNA/results/structures/file_list.txt\n"
      ]
     }
